# arch-install

./: .gitignore  .todo  Cargo.toml  Makefile  README.md  arch-install  arch-install.sh  arch-install.sh.old  arch-install.sh.old-script  arch-installer.sh  clean_up  index.html  install_requirements.sh  installer.txt  test-ai.sh
src/: censor_password.rs  colors.py  config.rs  constants.rs  enums.rs  get_settings.rs  helpers.rs  main.py  main.rs  menu.py  pre_installation.rs  settings.rs  setup.rs  timezones.rs
src/enums/: filesmanges.rs  mod.rs  partitioning.rs
src/installation_parts/: configure_the_system.rs  installation.rs  installion.rs  mod.rs  pre_installation.rs
src/utils/: clear_screen.py
