[package]
name = "arch-installer"
authors = ["abdalrzag eisa <bmjfdrh@gmail.com>"]
description = "Simple arch install script."
repository = "https://github.com/Senpai-10/arch-install"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.2.22"
clap-verbosity-flag = "1.0.1"
colored = "2.0.0"
dialoguer = { version = "0.10.2", features = ["fuzzy-select"] }
env_logger = "0.9.1"
log = "0.4.17"
prettytable-rs = "0.9.0"
rust-logger = {git = "https://github.com/Senpai-10/rust-logger"}
